# ra-gha-gen

./: .gitignore  README.md  pyproject.toml
dataset/: hard.jsonl  invalids.jsonl
docs/: benchmark_improvements.md  benchmark_real_plan.md  synthetic_bechmark_plan.md
docs/synthetic_benchmark_prompts/: nodejs_lib.md
graph/: corrector_each_step.yaml  main.yaml
src/: functions.py  graph.py  main.py  routers.py  tools.py
src/benchmarks/: async_sm_benchmark.py  mp_benchmark.py  sm_benchmark.py  test_env.py  test_workflows.py
src/benchmarks/prep/: repositories_filtering.py
src/models/: score.py  workflow.py
src/utils/: app_types.py  client.py  formatting.py  functional_test.py  lint.py  logger.py  prompts.json  scores.py  select_prompts.py
